링크 오류수정 및 vue 4번 포스팅 추가

--- a/_posts/2019-06-18-vuejs_3.md
+++ b/_posts/2019-06-18-vuejs_3.md
@@ -31,7 +31,7 @@ var app = new Vue({
 </script>
 ```
 
-[code pen](https://codepen.io/grayhacker91/pen/gNmwrv, "Vue-Directive-Example")
+[code pen](https://codepen.io/grayhacker91/pen/gNmwrv "Vue-Directive-Example")
 
 ## 전달인자
 
@@ -52,7 +52,7 @@ var vbind = new Vue({
 </script>
 ```
 
-[code pen](https://codepen.io/grayhacker91/pen/gNmwrv, "Vue-Directive-Example")
+[code pen](https://codepen.io/grayhacker91/pen/gNmwrv "Vue-Directive-Example")
 
 - DOM 이벤트를 수신하는 디렉트비는 v-on 디렉티브입니다.
 
