md 이름도 변경

--- a/_posts/2019-07-03-vuejs_10.md
+++ b/_posts/2019-07-03-vuejs_10.md
@@ -12,7 +12,7 @@ tags:
 
 - 크게 생성, 초기화, 갱신, 소멸의 4가지 단계로 구분됩니다.
 
-![vue life cycle diagram](/images/vue_lifecycle.png)
+![vue life cycle diagram](/images/vue_lifecycle.JPG)
 
 ### 생성(Create) 단계
 
