--- a/_posts/2019-07-11-vuejs_13.md
+++ b/_posts/2019-07-11-vuejs_13.md
@@ -82,7 +82,14 @@ bus.$on('id-selected', function (id) {
 
 ## 컴포넌트 범위
 
-- 
+```html
+<child-component>
+  {{ message }}
+</child-component>
+```
+
+- 위와 같은 템플릿이 있는 경우 message는 자식 데이터가 아닌 부모 데이터에 바인딩됩니다.
+- 상위 템플릿의 모든 내용은 상위 범위로 컴파일됩니다. 하위 템플릿의 모든 내용은 하위 범위에서 컴파일됩니다.
 
 ## 단일 슬롯
 
@@ -119,6 +126,31 @@ Vue.component('my-component', {
   </div>
 </div>
 ```
+
+## 동적 컴포넌트
+
+- 같은 마운트 포인트를 사용하고 예약된 `<component>` 엘리먼트를 사용하여 여러 컴포넌트 간에 동적으로 트랜지션하고 is 속성에 동적으로 바인드 할 수 있습니다.
+
+```html
+<component v-bind:is="currentView">
+  <!-- vm.currentView가 변경되면 컴포넌트가 변경됩니다! -->
+</component>
+<script>
+var vm = new Vue({
+  el: '#example',
+  data: {
+    currentView: 'home'
+  },
+  components: {
+    home: { /* ... */ },
+    posts: { /* ... */ },
+    archive: { /* ... */ }
+  }
+})
+</script>
+```
+
+- 동적 컴포넌트에서 keep-alive을 이용해 트랜지션된 컴포넌트를 메모리에 유지하거나, 다시 렌더링되지 않게 할 수 있습니다. 자세한 내용은 [keep-alive API문서](https://kr.vuejs.org/v2/api/#keep-alive "keep-alive API")를 확인하시면 됩니다.
 
 ps. 찾아보고 공부하면서 정리하는 내용이라 틀릴 수 있음을 알려드립니다.
 
