--- a/_posts/2019-07-16-webpack_1.md
+++ b/_posts/2019-07-16-webpack_1.md
@@ -96,7 +96,22 @@ npm install lodash --save
 
 ## Config
 
+- Webpack 설정파일은 webpack.config.js 파일입니다.
+- 이 파일을 프로젝트 루트경로에 놓고 실행하면 설정파일의 내용이 적용됩니다.
+
+```javascript
+// 설정 파일 예시
+const path = require('path');
+
+module.exports = {
+  entry: './src/index.js', // 번들의 시작 js파일
+  output: {
+    filename: 'main.js', // 번들 결과물 이름
+    path: path.resolve(__dirname, 'dist')
+  }
+};
+```
+
 참고
 
 - <https://webpack.js.org/guides/getting-started/>
-- webpack-생활코딩 영상 <https://www.youtube.com/watch?v=fcNAiMSlciI>
